--- a/public/views/ashe.html
+++ b/public/views/ashe.html
@@ -1,15 +1,24 @@
-<h1 class="text-align-center">Ashe</h1>
+<div class="media">
+  <div class="media-body">
+    <h1 class="media-heading">Ashe</h1>
 <p>
   The frost archer
 </p>
-<img src="http://apollo-na-uploads.s3.amazonaws.com/1420537412050/ashe-league-of-legends-30090-1920x1080.jpg" />
-<h2>Primary Role</h2>
+<h3>Primary Role</h3>
 <p>
   Marksman
 </p>
+</div>
+</div>
+<div class="media-right">
+
+
+<img src="http://apollo-na-uploads.s3.amazonaws.com/1420537412050/ashe-league-of-legends-30090-1920x1080.jpg" class="media-object"/>
+</div>
+
 <h2>Abilites<input type="checkbox" ng-model="checked"></h2>
-<ul ng-show="checked">
-  <li>
+<ul ng-show="checked" class="list-group">
+  <li class="list-group-item">
     Frost Shot <input type="checkbox" ng-model="checked1">
     <ul ng-show="checked1">
       <li>
@@ -18,7 +27,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Ranger's Focus <input type="checkbox" ng-model="checked2">
     <ul ng-show="checked2">
       <li>
@@ -32,7 +41,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Volley <input type="checkbox" ng-model="checked3">
     <ul ng-show="checked3">
       <li>
@@ -45,7 +54,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Hawkshot <input type="checkbox" ng-model="checked4">
     <ul ng-show="checked4">
       <li>
@@ -56,7 +65,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Enchanted Crystal Arrow <input type="checkbox" ng-model="checked5">
     <ul ng-show="checked5">
       <li>
