--- a/public/views/jhin.html
+++ b/public/views/jhin.html
@@ -1,15 +1,22 @@
-<h1 class="text-align-center">Jhin</h1>
+<div class="media">
+  <div class="media-body">
+    <h1 class="media-heading">Jhin</h1>
 <p>
   The Virtuoso
 </p>
-<img src="http://news.cdn.leagueoflegends.com/public/images/pages/2016/january/jhin/img/jhin-wallpaper.jpg" />
-<h2>Primary Role</h2>
+<h3>Primary Role</h3>
 <p>
   Marksman
 </p>
+</div>
+</div>
+<div class="media-right">
+<img src="http://news.cdn.leagueoflegends.com/public/images/pages/2016/january/jhin/img/jhin-wallpaper.jpg" class="media-object"/>
+</div>
+
 <h2>Abilites <input type="checkbox" ng-model="checked"></h2>
-<ul ng-show="checked">
-  <li>
+<ul ng-show="checked" class="list-group">
+  <li class="list-group-item">
     	Whisper <input type="checkbox" ng-model="checked1">
     <ul ng-show="checked1">
       <li>
@@ -26,7 +33,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Dancing Grenade <input type="checkbox" ng-model="checked2">
     <ul ng-show="checked2">
       <li>
@@ -34,7 +41,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Deadly Flurish <input type="checkbox" ng-model="checked3">
     <ul ng-show="checked3">
       <li>
@@ -43,7 +50,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Captive Audience <input type="checkbox" ng-model="checked4">
     <ul ng-show="checked4">
       <li>
@@ -52,7 +59,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Curtain Call <input type="checkbox" ng-model="checked5">
     <ul ng-show="checked5">
       <li>
