--- a/public/views/lux.html
+++ b/public/views/lux.html
@@ -1,15 +1,24 @@
-<h1 class="text-align-center">Lux</h1>
-<p>
-  The Lady of Luminosity
-</p>
-<img src="https://i.ytimg.com/vi/geAAOreLerc/maxresdefault.jpg" />
-<h2>Primary Role</h2>
-<p>
-  Mage
-</p>
+<div class="media">
+  <div class="media-body">
+    <h1 class="media-heading">Lux</h1>
+    <p>
+      The Lady of Luminosity
+    </p>
+    <h3>Primary Role</h3>
+    <p>
+      Mage
+    </p>
+  </div>
+
+
+<div class="media-right">
+<img src="https://i.ytimg.com/vi/geAAOreLerc/maxresdefault.jpg" class="media-object"/>
+</div>
+</div>
+
 <h2>Abilites<input type="checkbox" ng-model="checked"></h2>
-<ul ng-show="checked">
-  <li>
+<ul ng-show="checked" class="list-group">
+  <li class="list-group-item">
     	Illumination <input type="checkbox" ng-model="checked1">
     <ul ng-show="checked1">
       <li>
@@ -17,7 +26,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Light Binding <input type="checkbox" ng-model="checked2">
     <ul ng-show="checked2">
       <li>
@@ -25,7 +34,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Prismatic Battier <input type="checkbox" ng-model="checked3">
     <ul ng-show="checked3">
       <li>
@@ -34,7 +43,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Lucent Singularity <input type="checkbox" ng-model="checked4">
     <ul ng-show="checked4">
       <li>
@@ -43,7 +52,7 @@
       </li>
     </ul>
   </li>
-  <li>
+  <li class="list-group-item">
     Final Spark <input type="checkbox" ng-model="checked5">
     <ul ng-show="checked5">
       <li>
